# ashsa

./: CHANGELOG.md  Cargo.toml  README.md  renovate.json
.github/workflows/: ci.yml  lambda-package.yml  publish.yml  release.yml
src/: client.rs  config.rs  handler.rs  main.rs
