[package]
name = "ashsa"
version = "0.1.0"
edition = "2024"
description = "Alexa Smart Home Skill Adapter for Home Assistant"
license = "MIT"

[dependencies]
lambda_runtime = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
mockito = "1"
