[package]
name = "ashsa"
version = "0.2.1"
edition = "2024"
description = "Alexa Smart Home Skill Adapter for Home Assistant"
license = "MIT"

[dependencies]
lambda_runtime = "1.2.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
mockito = "1.7.2"
